--- a/shortcuts.html
+++ b/shortcuts.html
@@ -5,25 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>IntelliJ keys</title>
-    <style>
-        table {
-            height: 800px;
-        }
-        table, th, td {
-            border:1px solid black;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/shortcuts.css">
 </head>
 <body>
 <header>
     <h1>IntelliJ IDEA 단축키 15가지 &#9995;&#10133;&#9995;&#10133;&#9995;</h1>
-    <h3 style="color: gray">IntelliJ IDEA는 편집, 탐색, 리팩토링, 디버깅 등 일상적으로 수행하는 대부분의 작업에 대하여 해당 명령어의 키보드 단축키를 제공한다.</h3>
+    <h3>IntelliJ IDEA는 편집, 탐색, 리팩토링, 디버깅 등 일상적으로 수행하는 대부분의 작업에 대하여 해당 명령어의 키보드 단축키를 제공한다.</h3>
 </header>
 <section>
-    <iframe width="800" height="500" src="https://www.youtube.com/embed/QYO5_riePOQ" title="YouTube video player"></iframe>
+    <iframe width="800" height="500" src="https://www.youtube.com/embed/QYO5_riePOQ" title="YouTube video player" class="css-video"></iframe>
     <table>
-        <tr>
+        <tr class="css-name">
             <td>Alt + Enter</td>
             <td>F2</td>
             <td>Alt + 1</td>
@@ -37,7 +29,7 @@
             <td>에디터에 다시 포커스가 위치하게 한다.</td>
             <td>최근 실행했던 파일을 확인할 수 있다.</td>
         </tr>
-        <tr>
+        <tr class="css-name">
             <td>Ctrl + B</td>
             <td>Alt + F7</td>
             <td>tap ctrl twice</td>
@@ -51,7 +43,7 @@
             <td>Ctrl+W 또는 Ctrl+Shift+W(Windows/Linux)를 사용해 커서 근처의 코드 선택 영역을 확대하거나 축소할 수 있다.</td>
             <td>주석처리할 때 사용한다.</td>
         </tr>
-        <tr>
+        <tr class="css-name">
             <td>Shift + Ctrl + Enter</td>
             <td>Ctl + Alt + L</td>
             <td>Shift+Ctrl+Alt+T</td>
