--- a/training1.html
+++ b/training1.html
@@ -12,7 +12,10 @@
         h1{
             margin: 10px;
         }
-        p{
+        ul{
+            list-style: none;
+        }
+        li{
             margin: 10px;
         }
         .contents{
@@ -24,12 +27,14 @@
 <body>
 <h1>최신 웹 디자인 트렌드</h1>
 <section>
-    <p><span class="contents">반응형 웹 디자인</span> - 다양한 화면 크기에 최적화하다</p>
-    <p><span class="contents">플랫 디자인</span> - 입체에서 평면으로</p>
-    <p><span class="contents">풀스크린 배경</span> - 콘텐츠에 집중</p>
-    <p><span class="contents">원 페이지 사이트</span> - 한 페이지에 모든 내용을 담다</p>
-    <p><span class="contents">패럴랙스 스크롤링</span> - 동적인 효과로 강한 인상을!</p>
-    <p><span class="contents">웹 폰트</span> - 웹 타이포그래피를 받쳐주는 기술</p>
+    <ul>
+        <li><span class="contents">반응형 웹 디자인</span> - 다양한 화면 크기에 최적화하다</li>
+        <li><span class="contents">플랫 디자인</span> - 입체에서 평면으로</li>
+        <li><span class="contents">풀스크린 배경</span> - 콘텐츠에 집중</li>
+        <li><span class="contents">원 페이지 사이트</span> - 한 페이지에 모든 내용을 담다</li>
+        <li><span class="contents">패럴랙스 스크롤링</span> - 동적인 효과로 강한 인상을!</li>
+        <li><span class="contents">웹 폰트</span> - 웹 타이포그래피를 받쳐주는 기술</li>
+    </ul>
 </section>
 </body>
 </html>
