middelExmam html parts

--- a/middleExam.html
+++ b/middleExam.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>중간고사 준비</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        img{
+            width: 30%;
+        }
+        a{
+            text-decoration: none;
+            color: orange;
+        }
+    </style>
 </head>
 <body>
-
+<!--html5 semantic tag-->
+<section>
+    <!--img에 figure태그-->
+    <figure>
+        <img src="./img/cl.png" alt="zeno가 아닌 천러">
+        <!--    <figcaption>천러사진</figcaption>-->
+    </figure>
+    <a href="https://www.youtube.com/watch?v=gmS2hPuDNrw">Mark daddy</a>
+    <details>
+        <summary>NCT DREAM</summary>
+        <ul>
+            <li>마크</li>
+            <li>런쥔</li>
+            <li>제노</li>
+            <li>해찬</li>
+            <li>재민</li>
+            <li><mark>천러</mark></li>
+            <li>지성</li>
+        </ul>
+    </details>
+</section>
 </body>
 </html>
