--- a/loading.html
+++ b/loading.html
@@ -5,10 +5,9 @@
     <title>Title</title>
 <!--    <link rel="stylesheet" href="./css/loading.css">-->
     <style>
-        @charset "utf-8";
-        :root {
+        /*:root {*/
 
-        }
+        /*}*/
 
         *{
             margin: 0;
@@ -29,7 +28,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            border: 1px solid red;
+            /*border: 1px solid red;*/
         }
         .wrapper .loading{
             width: 200px;
