--- a/loading.html
+++ b/loading.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<!--    <link rel="stylesheet" href="./css/loading.css">-->
+<!--    <link rel="stylesheet" href="./styles/loading.css">-->
     <style>
         /*:root {*/
 
