--- a/changeSquare.html
+++ b/changeSquare.html
@@ -21,6 +21,10 @@ body{
 .wrapper{
   width: 300px;
   height: 300px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*transition 넣는 위치???*/
