--- a/cube.html
+++ b/cube.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="./styles/cube2.css">
-<!--<link rel="stylesheet" href="./styles/cube.css">-->
+<!--    <link rel="stylesheet" href="./styles/cube2.css">-->
+<link rel="stylesheet" href="./styles/cube.css">
 </head>
 <body>
 <div class="wrapper">
