--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     </header>
 
     <aside>
-        <div class="myImg"><img src="me.jpg" alt="김아현"></div>
+        <div class="myImg"><img src="cat.jpg" alt="김아현"></div>
         <h1>I'm AHYEON</h1>
         <p>&lt;Front-End Developer&#47;&gt;</p>
     </aside>
