rename portfolio -> about

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>중간고사과제_포트폴리오 페이지</title>
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
 <div class="wrapper">
