--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>중간고사과제_포트폴리오 페이지</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="portfolio/about.css">
 </head>
 <body>
 <div class="wrapper">
@@ -35,17 +35,17 @@
                 <li>
                     <p class="title">list 태그 실습</p>
                     <p>list태그와 시멘틱 태그를 활용하여 5주차 실습으로 진행한 과제물입니다</p>
-                    <div><iframe src="../training1.html"></iframe></div>
+                    <div><iframe src="training1.html"></iframe></div>
                 </li>
                 <li>
                     <p class="title">box Model</p>
                     <p>box 모델에 대한 수업에서 진행하였습니다. 다양한 box 모델 형태를 연습하였습니다.</p>
-                    <div><iframe src="../boxModel.html"></iframe></div>
+                    <div><iframe src="boxModel.html"></iframe></div>
                 </li>
                 <li>
                     <p class="title">table</p>
                     <p>table 태그를 활용한 과제물입니다. colspan과 rowspan을 사용하여 나타날 수 있는 테이블 형태를 연습했습니다.</p>
-                    <div><iframe src="../table.html" frameborder="0"></iframe></div>
+                    <div><iframe src="table.html" frameborder="0"></iframe></div>
                 </li>
             </ol>
         </div>
