--- a/class_Records/cube.html
+++ b/class_Records/cube.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 
     <!--    <link rel="stylesheet" href="./styles/cube2.css">-->
-<link rel="stylesheet" href="./styles/cube.css">
+<link rel="stylesheet" href="../styles/cube.css">
 </head>
 <body>
 <div class="wrapper">
