--- a/class_Records/units.html
+++ b/class_Records/units.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>units</title>
-    <link rel="stylesheet" href="./styles/units.css">
+    <link rel="stylesheet" href="../styles/units.css">
 </head>
 <body>
 <div class="wrapper">
