--- a/class_Records/responsive.html
+++ b/class_Records/responsive.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="minimum-scale=1.0, width=device-width">
     <title>Responsive BG</title>
-    <link rel="stylesheet" href="./styles/responsive.css">
+    <link rel="stylesheet" href="../styles/responsive.css">
 </head>
 <body>
 
