--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,30 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="portfolio.css">
     <title>Document</title>
 </head>
 <body>
 <div class="wrapper">
-
-
+    <div class="portfolio">Portfolio</div>
+    <div class="contents-wrapper">
+        <div class="contents-header">
+            <span class="dots dot1"></span>
+            <span class="dots dot2"></span>
+            <span class="dots dot3"></span>
+            <span class="header-title">August 14,2020</span>
+        </div>
+        <div class="contents">
+            <aside>
+                <div class="cat"><img src="https://github.com/dhflxhdxhd/webdev-2021/blob/main/img/cat.jpg?raw=true" alt="cat"></div>
+                <p>AHyeon KIM</p>
+                <p>Let's make it fun.</p>
+            </aside>
+            <section>
+                section
+            </section>
+        </div>
+    </div>
 </div>
 </body>
 </html>
