--- a/about.html
+++ b/about.html
@@ -44,9 +44,92 @@
             <aside>
                 <div class="cat"><img src="https://github.com/dhflxhdxhd/webdev-2021/blob/main/img/cat.jpg?raw=true" alt="cat"></div>
                 <span class="name">AHyeon KIM</span>
+                <p class="gotoCube">what did I do?</p>
+                <!--cube-->
+                <div class="cube">
+                    <div class="box front">그린테이블은 채식정보 웹서비스입니다.</div>
+                    <div class="box back">LGSI 인턴십을 하며 webOS를 이용하여 액자 display 프로그램을 개발하였습니다. </div>
+                    <div class="box right">smartfarm 프로젝트를 진행하였습니다.</div>
+                    <div class="box left">어디인은 제주대학교 시설 정보 웹서비스입니다.</div>
+                </div>
             </aside>
             <section>
-                section
+                <div class="PROJECTS">
+                    <p class="list1">PROJECTS</p>
+                    <ul>
+                        <li class="pj">
+                            <p class="pj-title">moonlightfairy</p>
+                            <p>안드로이드기반의 밤길 안전 어플입니다.</p>
+                            <p class="tool">개발도구</p>
+                            <ul>
+                                <li>android</li>
+                                <li>firebase</li>
+                            </ul>
+                        </li>
+                        <li class="pj">
+                            <p class="pj-title">smartfarm 프로젝트</p>
+                            <p>월드프렌즈 ICT 봉사단으로 진행한 프로젝트입니다. 베트남 현지에서 아두이노 기반의 작은 smartfarm을 구현하였습니다.</p>
+                        </li>
+                        <li class="pj">
+                            <p class="pj-title">VR기반의 노래방 게임</p>
+                            <p>Unity기반의 VR 노래방 게임을 제작하였습니다. 영상과 가사가 화면 상에 나타나며 실제 사용자가 노래를 부르는 공간에 있는 것처럼 느끼게 하고자 하였습니다.</p>
+                        </li>
+                        <li class="pj">
+                            <p class="pj-title">팁의 민족<p>
+                            <p>거리에 따른 예상 추가배달비 산정에 도움을 주는 웹 서비스입니다. 거리에 따른 추가배달비를 일일이 판매자에게 문의해야 했던 기존 시스템의 문제점을 개선하는 것을 목표로 개발하였습니다.</p>
+                            <p class="tool">개발도구</p>
+                            <ul>
+                                <li>html/css</li>
+                                <li>javascript</li>
+                                <li>node.js</li>
+                            </ul>
+                        </li>
+                        <li class="pj">
+                            <p class="pj-title">그린테이블</p>
+                            <p>테스트 페이지를 더해 자신의 위치를 기준으로 한 맞춤형 비건 장소 정보 제공하는 웹 서비스입니다</p>
+                            <p class="tool">개발도구</p>
+                            <ul>
+                                <li>html/css</li>
+                                <li>javascript</li>
+                                <li>Django</li>
+                            </ul>
+                        </li>
+                        <li class="pj">
+                            <p class="pj-title">어디인</p>
+                            <p>제주대학교 내 순환버스와 시설 정보를 알려주는 웹 서비스입니다.</p>
+                            <p class="tool">개발도구</p>
+                            <ul>
+                                <li>html/css</li>
+                                <li>javascript</li>
+                                <li>React</li>
+                                <li>node.js</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="CONTACT">
+                    <p class="list2">CONTACT</p>
+                    <table>
+                        <tr>
+                            <td>📱</td>
+                            <td>(+82)010-2798-6216</td>
+                        </tr>
+                        <tr>
+                            <td>📧</td>
+                            <td>
+                                <a href="mailto:dhflxhdxhd@gmail.com" title="이메일보내기"> dhflxhdxhd@gmail.com</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>💻</td>
+                            <td><a href="https://github.com/dhflxhdxhd">github.com/dhflxhdxhd</a></td>
+                        </tr>
+                        <tr>
+                            <td>🕸</td>
+                            <td><a href="dhflxhdxhd.github.io">blog)dhflxhdxhd.github.io</a></td>
+                        </tr>
+                    </table>
+                </div>
             </section>
         </div>
     </div>
